fix(p2p): write mass runs continuously and clean in memory data (hopefully prevents timeouts after 1000+ runs)